# evoagent

./: .env.example  .gitignore  README.md  REMAINING_TODOS.md  environment.yml  pyproject.toml
docs/: evoagent_interview_notes.md
scripts/: check_llm_config.py  evaluate_agent_prompts.py  evaluate_search_retrieval_e2e.py
src/evoagent/: __init__.py  app.py  cli.py
src/evoagent/agents/: __init__.py  base.py  specialists.py  workers.py
src/evoagent/api/: __init__.py  deps.py  main.py
tests/: conftest.py  test_api.py  test_app_metadata.py  test_base_subagent.py  test_checkpointer.py  test_cli_chat_commands.py  test_conversation_history_relevance.py  test_docker_sandbox.py  test_evolution_github_special.py  test_feedback_failure_marker.py  test_file_output.py  test_filesystem_execution_path.py  test_function_call_tools.py  test_github_api_agent.py  test_graph.py  test_graph_retry.py  test_llm_fallback.py  test_llm_model_cooldown.py  test_llm_provider_routing.py  test_llm_refactor.py  test_llm_timeout_profile.py  test_main_agent_deepseek_preferred.py  test_memory_distill_gate.py  test_models.py  test_multiturn_context.py  test_orchestrator_api_first.py  test_orchestrator_timeout_and_observability.py  test_qwen_provider.py  test_reflection_final.py  test_reflection_pass.py  test_router.py  test_runtime_architecture.py  test_sandbox.py  test_search_agent_retrieval.py  test_semantic_forgetting.py  test_semantic_hybrid_retrieval.py  test_simple_single_output_bypass_aggregate.py  test_skill_ab_report.py  test_skill_candidate_rollout.py  test_skill_evolution_parse.py  (+8 more)
(+38 files in other folders)
