[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoagent"
version = "0.1.0"
description = "Self-evolving agent system with routing, sub-agent orchestration, skill evolution, and layered memory"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0",
  "tenacity>=9.0",
  "orjson>=3.10",
  "networkx>=3.3",
  "httpx>=0.27",
  "litellm>=1.63",
  "langgraph>=1.1",
  "langgraph-checkpoint-sqlite>=3.0",
  "langsmith>=0.7",
  "fastapi>=0.136",
  "uvicorn>=0.35",
  "docker>=7.1",
  "instructor>=1.15",
  "chromadb>=0.5.5",
  "structlog>=24.2",
  "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=7.0",
  "ruff>=0.8",
]

[project.scripts]
evoagent = "evoagent.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
